--- a/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
+++ b/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
@@ -30,15 +30,15 @@
                         </tr>
                     </thead>
                     <tbody id="zone_minutes_list">
-                        <tr v-for="(p, index) in session.parameter_set.parameter_set_zone_minutes" v-bind:key="p.id">
-                            <td v-on:click="showEditParametersetZoneMinutes(index)" class="player_table_cell">
+                        <tr v-for="(p, index) in session.parameter_set.parameter_set_zone_minutes_order" v-bind:key="p.id">
+                            <td v-on:click="showEditParametersetZoneMinutes(p)" class="player_table_cell">
                                 [[index+1]]
                             </td>
-                            <td v-on:click="showEditParametersetZoneMinutes(index)" class="player_table_cell">
-                                [[p.zone_minutes]]
+                            <td v-on:click="showEditParametersetZoneMinutes(p)" class="player_table_cell">
+                                [[session.parameter_set.parameter_set_zone_minutes[p].zone_minutes]]
                             </td>
-                            <td v-on:click="showEditParametersetZoneMinutes(index)" class="player_table_cell">
-                                [[p.label]]                         
+                            <td v-on:click="showEditParametersetZoneMinutes(p)" class="player_table_cell">
+                                [[session.parameter_set.parameter_set_zone_minutes[p].label]]                         
                             </td>
                             
                         </tr>
