--- a/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_modal.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_modal.html
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-body">
                 <form id="parametersetPeriodForm" v-on:submit.prevent="onSubmit">
-                    {% for i in parameterset_period_form %}
+                    {% for i in parameterset_pay_block_form %}
                     <div class="row">
                         <div class = "col col-md-10 offset-md-1">  
                             {{ i|as_crispy_field }}         
@@ -22,7 +22,7 @@
                 
                 <button type="button"
                         class="btn btn-outline-primary"
-                        v-on:click = "sendUpdatePeriods()"
+                        v-on:click = "sendUpdateParameterSetPayBlock()"
                         v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
