--- a/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_payment_modal.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_payment_modal.html
@@ -22,7 +22,7 @@
                 
                 <button type="button"
                         class="btn btn-outline-primary"
-                        v-on:click = "sendUpdatePayment()"
+                        v-on:click = "sendUpdateParameterSetPayBlockPayment()"
                         v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
