--- a/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
@@ -25,7 +25,7 @@
                                     Type
                                 </th>
                                 <th scope="col" class = "text-nowrap">
-                                    Payments
+                                    Payments for average AZM in block
                                 </th>
                                 <th scope="col" class = "text-nowrap">
                                     
@@ -37,7 +37,7 @@
                         </thead>
                         <tbody id="period_list">
                             <tr v-for="(p, index) in session.parameter_set.parameter_set_pay_blocks_order" 
-                                v-bind:key="p"
+                                v-bind:key="p + '_pay_blocks'"
                                 :set="temp_p=session.parameter_set.parameter_set_pay_blocks[p]" >
                                 <td v-on:click="showEditPayBlock(p)" class="player_table_cell text-nowrap">
                                     [[temp_p.pay_block_number]]
@@ -45,8 +45,19 @@
                                 <td v-on:click="showEditPayBlock(p)" class="player_table_cell text-nowrap">
                                     [[temp_p.pay_block_type]]
                                 </td>
-                                <td  class="player_table_cell text-nowrap">
-                                   
+                                <td  class="text-nowrap">
+                                   <div class="row">
+                                        <div v-for="(p2, index2) in temp_p.parameter_set_pay_block_payments_order" 
+                                             v-bind:key="p2+'_pay_block_payments'"
+                                             :set="temp_p2=temp_p.parameter_set_pay_block_payments[p2]"
+                                             class="col player_table_cell"
+                                             v-on:click="showEditPayBlockPayment(p, p2)">                                                
+                                                <div class=""><u>[[temp_p2.label]]</u></div>
+                                                <div>Payment: [[temp_p2.payment]]</div>
+                                                <div>Group Bonus: [[temp_p2.group_bonus]]</div>
+                                                <div>Fitbit %: [[temp_p2.no_pay_percent]]</div>
+                                        </div>
+                                   </div>
                                 </td>
                                 <td  class="player_table_cell text-nowrap">
                                     <button class="btn btn-outline-success btn-sm me-1"
