--- a/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
+++ b/main/templates/staff/staff_session_parameters/zone_minutes/zone_minutes_card.html
@@ -1,7 +1,7 @@
 <div class="card" v-show="first_load_done">                  
     <div class="card-header fw-bold">                
         <span class="align-middle">
-           Zone Minutes
+           Daily AZM Targets
         </span>  
         
         <span class="float-end">
