--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -54,25 +54,15 @@
         </div>
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
-                <span v-if="session_player.checked_in_today">
-                    <span  v-if="session.current_parameter_set_period.period_type==='Group Pay'">
-                        Your individual earnings today:
-                    </span>
-                    <span v-else>
-                        Your earnings today:
-                    </span>
+                <span v-if="session_player.checked_in_today">                   
+                    Your earnings today:           
                 </span>
                 <span v-else>
-                    <span  v-if="session.current_parameter_set_period.period_type==='Group Pay'">
-                        Your potential individual earnings today:
-                    </span>
-                    <span v-else>
-                        Your potential earnings today:
-                    </span>
+                    Your potential earnings today:
                 </span>                 
             </div>
             <div class="col text-start ps-1">
-                <span v-if="session.current_parameter_set_period.period_type==='No Pay'">
+                <span v-if="session.current_parameter_set_period.period_type==='Earn Fitbit'">
                     [[session_player.no_pay_percent]]% of keeping your Fitbit
                 </span>
                 <span v-else>
@@ -80,22 +70,7 @@
                 </span>
                 
             </div>
-        </div>
-        <div class="row" v-if="session.current_parameter_set_period.period_type==='Group Pay'">
-            <div class="col text-end pe-1 text-nowrap">
-                <span v-if="session_player.group_checked_in_today">
-                    Your group earnings today:
-                </span>
-                <span v-else>
-                    Your potential group earnings today:<br>
-                    <span style="color:red">(Your team is not fully checked in)</span>
-                </span>
-
-            </div>
-            <div class="col text-start ps-1">
-               $[[session_player.group_earnings]]
-            </div>
-        </div>       
+        </div>      
         <div class="row text-end fw-bold" v-if="session_player.survey_link != ''">            
             <div class="col mt-2">              
                 Complete the survey before check in: <a v-bind:href="session_player.survey_link">Open Survey</a>
