--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -67,7 +67,7 @@
                                 [[p.period_type]]
                             </td>
                             <td class="player_table_cell text-center text-nowrap w-auto">
-                                [[p.pay_block]]
+                                [[p.pay_block_number]]
                             </td>
                             <td class="player_table_cell text-center text-nowrap w-auto">
                             [[p.fitbit_formatted_date]]
