--- a/main/templates/staff/staff_session_parameters.html
+++ b/main/templates/staff/staff_session_parameters.html
@@ -50,8 +50,6 @@
 <div v-if="session">
 {%include "staff/staff_session_parameters/general_settings/edit_parameterset_modal.html"%}
 {%include "staff/staff_session_parameters/players/edit_parameterset_player_modal.html"%}
-{%include "staff/staff_session_parameters/periods/edit_parameterset_period_payment_modal.html"%}
-{%include "staff/staff_session_parameters/zone_minutes/edit_parameterset_zone_minutes_modal.html"%}
 {%include "staff/staff_session_parameters/control/upload_parameters_modal.html"%}
 {%include "staff/staff_session_parameters/control/import_parameters_modal.html"%}
 {%include "staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_modal.html"%}
@@ -75,12 +73,9 @@
 </div>
 
 <div class="row justify-content-lg-center mb-4" v-cloak v-if="session">
-    <div class="col-lg-9">
+    <div class="col-lg">
         {%include "staff/staff_session_parameters/pay_blocks/pay_blocks_card.html"%}
-    </div>
-    <div class="col-lg-3">
-        {%include "staff/staff_session_parameters/zone_minutes/zone_minutes_card.html"%}  
-    </div> 
+    </div>    
 </div>
 
 <div class="row justify-content-lg-center" v-cloak v-if="session">
