--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -60,7 +60,7 @@
                 [[session_player.todays_average_zone_minutes]]
             </div>
         </div>
-        <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group'">
+        <div class="row" v-if="session.session_players.length>1">
             <div class="col text-end pe-1 text-nowrap">
                 Your partner's average zone minutes:
             </div>
@@ -83,8 +83,7 @@
                 </span>
                 <span v-else>
                     $[[session_player.earnings_fixed]]
-                </span>
-                
+                </span>                
             </div>
         </div>   
         <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group' || session.current_parameter_set_period.period_type=='Block Pay Individual'">
