copy csv playerlist to clipboard from server. fixes #133.

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -21,19 +21,28 @@
             <button type="button" 
                     class="btn btn-outline-primary me-2" 
                     title="Pull Time Series Data" 
-                    v-on:click="senddPullTimeSeriesData()" 
+                    v-on:click="sendPullTimeSeriesData()" 
                     v-bind:disabled="working"
                     v-show="session.started">
                 Pull Activity Data <span v-if="time_series_pulled"><i class="fas fa-check"></i></span>
             </button>
 
             <button type="button" 
-                    class="btn btn-outline-primary" 
+                    class="btn btn-outline-primary me-2" 
                     title="Upload Email List" 
                     v-on:click="showSendEmailList()" 
                     v-bind:disabled="working"
                     v-show="session.started">
                 Upload Player List
+            </button>
+
+            <button type="button" 
+                    class="btn btn-outline-primary" 
+                    title="Upload Email List" 
+                    v-on:click="get_playerlist_csv()" 
+                    v-bind:disabled="working"
+                    v-show="session.started">
+                Copy Player List <span v-if="player_list_copied"><i class="fas fa-check"></i></span>
             </button>
         </span>        
     </div>
