import session connections

--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -75,6 +75,7 @@
 {%include "staff/staff_session/subjects/view_subject_modal.html"%}
 {%include "staff/staff_session/subjects/view_subject_chat_modal.html"%}
 {%include "staff/staff_session/subjects/upload_email_list.html"%}
+{%include "staff/staff_session/subjects/import_session_modal.html"%}
 </div>
 {%include "staff/staff_session/control/sendInvitationModal.html"%}
 <!-- cards -->
