--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -70,12 +70,7 @@
         </div>
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
-                <span v-if="session_player.checked_in_today">                   
-                    Your earnings today:           
-                </span>
-                <span v-else>
-                    Your potential earnings today:
-                </span>                 
+                Your check-in earnings today:           
             </div>
             <div class="col text-start ps-1">
                 <span v-if="session.current_parameter_set_period.period_type==='Earn Fitbit'">
