--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -70,7 +70,12 @@
         </div>
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
-                Your check-in earnings today:           
+                <span v-if="session_player.checked_in_today">                   
+                    Your check-in earnings today:           
+                </span>
+                <span v-else>
+                    Your potential check-in earnings today:
+                </span>                 
             </div>
             <div class="col text-start ps-1">
                 <span v-if="session.current_parameter_set_period.period_type==='Earn Fitbit'">
@@ -83,7 +88,7 @@
         </div>   
         <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group' || session.current_parameter_set_period.period_type=='Block Pay Individual'">
             <div class="col text-end pe-1 text-nowrap">
-                Your current individual bonus:                 
+                Your predicted individual bonus:                 
             </div>
             <div class="col text-start ps-1">               
                 $[[session_player.individual_earnings]]
@@ -91,7 +96,7 @@
         </div> 
         <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group'">
             <div class="col text-end pe-1 text-nowrap">
-                Your current group bonus:                 
+                Your predicted group bonus:                 
             </div>
             <div class="col text-start ps-1">               
                 $[[session_player.group_earnings]]
