--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -68,7 +68,7 @@
                 [[session_player.groups_average_zone_minutes]]
             </div>
         </div>
-        <div class="row">
+        <div class="row" v-if="session_player.earnings_fixed > 0 || session_player.no_pay_percent > 0">
             <div class="col text-end pe-1 text-nowrap">
                 <span v-if="session_player.checked_in_today">                   
                     Your check-in earnings today:           
