--- a/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
@@ -55,13 +55,14 @@
                                     [[temp_p.no_pay_percent]]%
                                 </td>
                                 <td  class="text-nowrap">
-                                   <div class="row">
+                                   <div class="row text-nowrap">
                                         <div v-for="(p2, index2) in temp_p.parameter_set_pay_block_payments_order" 
                                              v-bind:key="p2+'_pay_block_payments'"
                                              :set="temp_p2=temp_p.parameter_set_pay_block_payments[p2]"
-                                             class="col player_table_cell"
+                                             class="col player_table_cell text-nowrap"
                                              v-on:click="showEditPayBlockPayment(p, p2)">                                                
                                                 <div class=""><u>[[temp_p2.label]]</u></div>
+                                                <div>Upper Bound: [[temp_p2.zone_minutes]]</div>
                                                 <div>Payment: [[temp_p2.payment]]</div>
                                                 <div>Group Bonus: [[temp_p2.group_bonus]]</div>                                               
                                         </div>
